added hamburger I have added the hamburger menu icon for smaller screens and not for larger screens

--- a/Larger Projects/Loopstudio/index.css
+++ b/Larger Projects/Loopstudio/index.css
@@ -19,3 +19,28 @@
     }
 
 }
+
+.hamburger {
+    display: flex;
+    align-items: start;
+    width: 24px;
+    height: 24px;
+}
+
+.upper-row,
+.middle-row,
+.lower-row {
+    width: 100%;
+    height: 2px;
+    background-color: white;
+}
+
+.middle-row {
+    position: relative;
+    top: 7px;
+}
+
+.lower-row {
+    position: relative;
+    top: 14px;
+}
